add classifiers to pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,3 +12,10 @@ python = "^3.10"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[project]
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "License :: OSI Approved :: GPL License",
+    "Operating System :: Linux",
+]
